--- a/pre-build/scss/common/media.scss
+++ b/pre-build/scss/common/media.scss
@@ -36,7 +36,7 @@
 
 @media screen and (max-width:768px){
     *{
-        &::-webkit-scrollbar{display: none;}
+        // &::-webkit-scrollbar{display: none;}
         &.mobScroll::-webkit-scrollbar{display: block;} //모바일에서도 스크롤보이게
     }
     .leftArea{left: -301px; transition: .3s;
