--- a/pre-build/scss/scss-build/layout.css
+++ b/pre-build/scss/scss-build/layout.css
@@ -92,8 +92,6 @@
   overflow-y: auto;
   z-index: 1100;
   background-color: #1C253D;
-  -webkit-box-shadow: 0px 0px 3px 2px rgba(255, 255, 255, 0.5);
-          box-shadow: 0px 0px 3px 2px rgba(255, 255, 255, 0.5);
 }
 
 .wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li {
@@ -117,19 +115,14 @@
   transition: .5s;
 }
 
-.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li span:after {
-  content: '';
-  width: 15px;
-  height: 9px;
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li span svg {
   position: absolute;
-  top: 50%;
-  right: 28px;
+  top: 25px;
+  right: 20px;
+  width: 30px;
+  height: 18px;
   -webkit-transition: .5s;
   transition: .5s;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  background-image: url("../../images/ico/ico-down.svg");
-  background-repeat: no-repeat;
 }
 
 .wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li a {
@@ -157,6 +150,8 @@
   color: rgba(255, 255, 255, 0.8);
   text-indent: 50px;
   font-family: 'Noto Sans Light';
+  -webkit-transition: .5s;
+  transition: .5s;
 }
 
 .wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li > ul.leftSubMenu li a:hover {
@@ -171,10 +166,10 @@
   background-color: #5869F0;
 }
 
-.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li.active span:after {
-  -webkit-transform: translateY(-50%) rotate(-180deg);
-          transform: translateY(-50%) rotate(-180deg);
-  background: url("../../images/ico/ico-down-w.svg") no-repeat;
+.wrap.pre.leftMenu .leftAreaType02 > .leftMenu > li.active span svg {
+  top: 21px;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 
 .wrap.pre.floating #floatingMenu {
