--- a/pre-build/html/layout/layout-flex.html
+++ b/pre-build/html/layout/layout-flex.html
@@ -283,7 +283,7 @@
                                 </ul>
                             </div>
 
-                            <div class="tabCont active">
+                            <!-- <div class="tabCont active">
                                 <div class="highlightArea cScroll">
                                     <pre>
                                 <code class="language-html">
@@ -1079,7 +1079,7 @@
                                         </code>
                                     </pre>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="btnArea end">
                             <button type="button" class="button Bgblue btnResult">
