--- a/pre-build/scss/common/skeleton.scss
+++ b/pre-build/scss/common/skeleton.scss
@@ -12,7 +12,7 @@ html{
         .highlightArea{min-height: 400px; background-color: var(--d-bg-skeleton);
             >*{display: none;}
         }
-        .btnArea .btnResult{min-width: 85px; height: 34px;background-color: var(--d-bg-skeleton);
+        .btnArea .btnResult,.btnDataDownload{min-width: 85px; height: 34px;background-color: var(--d-bg-skeleton);
             >*{display: none;}
         }
         .tabWrap.type01 .tabNav .tabList{min-height: 37px; border-bottom: 0; background-color: var(--d-bg-skeleton);
