--- a/pre-build/scss/scss-build/media.css
+++ b/pre-build/scss/scss-build/media.css
@@ -33,6 +33,15 @@
   .leftArea .leftMenu > li ul.leftSubMenu li > a {
     font-size: 1em;
   }
+  .leftArea .leftMenu > li ul.leftSubMenu li > a svg {
+    top: 4px;
+  }
+  .leftArea .leftMenu > li ul.leftSubMenu li > .dep3 > li > a {
+    font-size: 0.906em;
+  }
+  .leftArea .leftMenu > li ul.leftSubMenu li.on > a svg.fold {
+    top: 13px;
+  }
   .leftArea .leftMenu > li.active span a svg {
     top: 18px;
   }
@@ -52,6 +61,9 @@
 }
 
 @media screen and (max-width: 768px) {
+  *::-webkit-scrollbar {
+    display: none;
+  }
   *.mobScroll::-webkit-scrollbar {
     display: block;
   }
@@ -61,7 +73,7 @@
     transition: .3s;
   }
   .leftArea .leftMenu li:first-child > a > img {
-    width: 160px;
+    width: 53%;
   }
   .leftArea .leftMenu li span > a {
     font-size: 1em;
@@ -73,6 +85,25 @@
   }
   .leftArea .leftMenu li ul.leftSubMenu li a {
     font-size: 0.88em;
+  }
+  .leftArea .leftMenu li ul.leftSubMenu li a svg.unfold {
+    width: 14px;
+    height: 14px;
+  }
+  .leftArea .leftMenu li ul.leftSubMenu li .dep3 > li {
+    padding-bottom: 5px;
+  }
+  .leftArea .leftMenu li ul.leftSubMenu li .dep3 > li > a {
+    font-size: 0.750em;
+  }
+  .leftArea .leftMenu li ul.leftSubMenu li .dep3 > li:before {
+    top: 7px;
+    width: 5px;
+    height: 5px;
+  }
+  .leftArea .leftMenu li ul.leftSubMenu li.on > a svg.fold {
+    width: 12px;
+    top: 11px;
   }
   .leftArea .leftMenu li.active span a svg {
     top: 17px;
@@ -300,8 +331,7 @@
     display: none;
   }
   .leftArea.active {
-    min-width: 40%;
-    max-width: 200px;
+    max-width: calc(100% - 100px);
   }
   .leftArea.active ~ .rightArea {
     left: 0;
@@ -419,12 +449,6 @@
   }
   #wrap.err .bottomDiv a:hover {
     text-decoration: underline;
-  }
-  .topArea .backtoTop:hover {
-    background-color: var(--bg-hv-btt);
-  }
-  .topArea .backtoTop:hover svg {
-    fill: var(--hv-svg-btt);
   }
   .headArea > .inner .backArea .btnBack:hover:before {
     opacity: 1;
