--- a/pre-build/scss/component/input.scss
+++ b/pre-build/scss/component/input.scss
@@ -5,7 +5,7 @@
       >li{display: flex; align-items: center; flex: 1; height: 30px; position: relative; border: 1px solid var(--d-bdc);
       text-indent: 5px; box-sizing: border-box; cursor: pointer; background-color: var(--d-bg-select);
         >span{flex: 0.975; display: block; line-height: 28px; color: var(--c-333-white); font-family: $d-fz;}
-        svg{fill: var(--svg-fill-type01);}
+        svg{fill: var(--c-333-white);}
         .selList{display: none; position: absolute; top: 29px; left: -1px; width: 100%; z-index: 200; 
         border: 1px solid var(--d-bdc); border-top: 0; border-radius: 0 0 4px 4px; background-color: var(--d-bg-select);
           li{font-family: $d-fz; color: var(--c-333-white);
