--- a/pre-build/scss/component/popup.scss
+++ b/pre-build/scss/component/popup.scss
@@ -5,7 +5,7 @@
         .popup{display: none; width: 300px; border-radius: 4px; z-index: 10000;
             .head{height: 50px; line-height: 50px; padding: 0 15px; box-sizing: border-box; border-radius: 4px 4px 0 0;
             color: $cfff; font-family: $d-fz; font-size: 1em; background-color: $blueBg;
-                .btnClose{position: absolute; top: 17px; right: 15px; width: 21px; height: 21px; background: url("../../images/ico/ico-pop-close.png") no-repeat center;}
+                .btnClose{position: absolute; top: 5px; right: 10px;}
             }
             .cont{padding: 20px; box-sizing: border-box; border-radius: 0 0 4px 4px; 
             font-family: $d-fz; font-size: 0.88em; background-color: $whiteBg;}
@@ -15,7 +15,7 @@
         justify-content: center; height: 50px; line-height: 50px;padding: 0 20px; box-sizing: border-box; border-radius: 4px; 
         font-family: $d-fz; font-size: 1em; color: $cfff; background-color: $blueBg;}
     }
-    .exDimmed{display: none; position: fixed; z-index: 9999; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0, 0, 0,0.6);}
+    .exDimmed{display: none; position: fixed; z-index: 9990; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0, 0, 0,0.6);}
 
     &.toastPop{
         #exToast{display: none; position: fixed; top: 50px; left: 50%; transform: translateX(-50%); 
