--- a/pre-build/scss/scss-build/component.css
+++ b/pre-build/scss/scss-build/component.css
@@ -1708,6 +1708,7 @@ code[class*=language-], pre[class*=language-] pre {
   color: #000;
   border-radius: 0 0 0 5px;
   background-color: #fff;
+  z-index: 10000;
 }
 
 #frameBody .btnArea svg {
@@ -3011,7 +3012,7 @@ code[class*=language-], pre[class*=language-] pre {
 }
 
 .customSelect > ul > li svg {
-  fill: var(--svg-fill-type01);
+  fill: var(--c-333-white);
 }
 
 .customSelect > ul > li .selList {
@@ -3273,6 +3274,14 @@ input[type="image"], input[type="color"], input[type="button"] {
   width: 150px;
   border: 1px solid var(--c-333-white);
   height: 150px;
+  padding: 5px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.resultArea .inner .toolTipBox p {
+  font-size: 14px;
+  color: var(--c-333-white);
 }
 
 .resultArea .inner .toolTipBox:hover .exTooltip {
@@ -3334,11 +3343,8 @@ input[type="image"], input[type="color"], input[type="button"] {
 
 .wrap.pre.popShowHide .popup .head .btnClose, .wrap.pre.dragPop .popup .head .btnClose {
   position: absolute;
-  top: 17px;
-  right: 15px;
-  width: 21px;
-  height: 21px;
-  background: url("../../images/ico/ico-pop-close.png") no-repeat center;
+  top: 5px;
+  right: 10px;
 }
 
 .wrap.pre.popShowHide .popup .cont, .wrap.pre.dragPop .popup .cont {
@@ -3381,7 +3387,7 @@ input[type="image"], input[type="color"], input[type="button"] {
 .wrap.pre .exDimmed {
   display: none;
   position: fixed;
-  z-index: 9999;
+  z-index: 9990;
   left: 0;
   top: 0;
   width: 100%;
