--- a/pre-build/scss/scss-build/custom.css
+++ b/pre-build/scss/scss-build/custom.css
@@ -30,6 +30,14 @@
   width: 150px;
   border: 1px solid var(--c-333-white);
   height: 150px;
+  padding: 5px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.resultArea .inner .toolTipBox p {
+  font-size: 14px;
+  color: var(--c-333-white);
 }
 
 .resultArea .inner .toolTipBox:hover .exTooltip {
